--- a/index.html
+++ b/index.html
@@ -68,17 +68,53 @@
       <img style="margin-left: 35em;" class="carrot" src="./assets/carrot.png" alt="">
       <h1 style="margin-left: 4em;" class="about-title">ABOUT OUR SHOP</h1>
       <img style="margin-left: 15em; margin-top: 1em;" class="i2" src="./assets/Image.png" alt="">
-    </div>
+    
     <div class="lorem">
-      <p style="margin-left: 60em;  margin-top: 0;  font-weight: 200px ;">It is a long established fact that a reader will be distracted
+      <p style="margin-left: 25em;  margin-top: 0;  font-weight: 200px ;">It is a long established fact that a reader will be distracted
         by the <br>readable content of a page when looking at its layout. The point of <br>using Lorem </p>
     </div>
-    <a style="margin-left:70em; background-color: black; color: aliceblue; text-decoration: none; height: 100vh; width: 500vw;" href="#">READ MORE</a>
+    <a style="margin-left:35em; background-color: black; color: aliceblue; text-decoration: none; height: 100vh; width: 500vw;" href="#">READ MORE</a>
+  
   </div>
-  <div class="container">
-    <img style="" src="./assets/carrot.png" alt="">
+</div>
+  <div style="margin-left: 55em;" class="container-veg">
+    <img style="margin-left:35em;"class="carrot" src="./assets/carrot.png" alt="">
+    <h1 style="margin-left:4em;" class="about-t">OUR VEGETABLES</h1>
+    <p style="margin-left:25em;" class="veg-c">Reader will be distracted by the readable content of a</p>
+  
+  <div class="veg-section">
+    <div class="row">
+      <div class="box-section">
+        <div class="card-group">
+          <div class="card">
+            <img src="./assets/tomato.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tomato</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="btn"><a href="#"> BUY NOW</a></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
